--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
     "name": "npm-cli-init",
-    "version": "0.1.0",
+    "version": "1.1.0",
     "description": "npm cli interface development init.",
-    "repository": "http://github.com/Julienedies/npm-cli-init.git",
-    "main":"index.js",
+    "preferGlobal": "true",
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/Julienedies/npm-cli-init.git"
+    },
+    "main": "index.js",
     "bin": {
-        "cli_test": "bin/cli_test"
+        "julienedies": "bin/test"
     },
-    "devDependencies": {
+    "devDependencies": {},
+    "scripts": {
+        "preInstall": ""
     },
-    "scripts": {}
+    "bugs": {
+        "url": "https://github.com/Julienedies/npm-cli-init/issues"
+    },
+    "homepage": "https://github.com/Julienedies/npm-cli-init#readme",
+    "author": "",
+    "license": "ISC"
 }
